--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,12 @@
   "dependencies": {
   
     
+  "@googlemaps/react-wrapper": "^1.1.35",
+  
+    
+  "@react-google-maps/api": "^2.19.0",
+  
+    
   "@react-pdf-viewer/core": "^3.6.0",
   
     
@@ -25,6 +31,9 @@
   
     
   "axios": "^1.4.0",
+  
+    
+  "google-map-react": "^2.2.1",
   
     
   "http-proxy-middleware": "^2.0.6",
